Simplify internal API for retrieving shared results files
Remove assertion in test that the shared results are stored as a zip file.
Add TODO to consider using gzipped JSON files instead of zip files as the
internal storage format.